# cursorxiangmuliuc

./: .Rules  备份  .Rules copy  .Rules copy 2  .Rules-提示词正式.md  .Rules英文  .gitignore  IOS 提示词-3.md  IOS 提示词.md  curosr学习.docx  万事开头第一步.md  小程序微信小程序开发指令文档.md  开始开发步骤.md  微信小程序需求分析报.md  提示词.md  网页金句插件提示词.md
.claude/: .config.json  settings.local.json
ABB官网/: index.html
AI编程/: .AI RULES
APP/: app.json  app.wxss  habit-app-prototype.html  project.config.json
GE_REN_XIANGMU/: env.example  nuxt.config.ts  package.json  pnpm-lock.yaml
IOS/: index.html  project.private.config.json  提示词.md
IOS2/: index.html
company-website-1/: app.json  app.wxss  project.private.config.json
h5-project/: .eslintrc.cjs  .prettierrc.js  CLAUDE.md  README.md  Tauri技术实现方案.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  vite.config.js  业务需求文档.md  技术栈分析文档.md  项目问题报告与解决方案.md
rules 规则/: .Rules-提示词正式.md  .cursorrules.md  IOS 提示词-2.md  前端技术提示文档.md  技术开发规则.md
tauri-invite-app/: .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.js
tauri-invite-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-invite-app/src-tauri/src/: commands.rs  database.rs  main.rs  models.rs  system_tray.rs  utils.rs
web/: .gitignore  CLAUDE.md  Context7-README.md  mcp.config.json  package.json  pnpm-lock.yaml  test-dev-server.js  vite.config.ts  vite.test.config.js  路由j技术文档.md
三顾官网/: .rules  index.html  需求.md
三顾官网2/: .rules  index.html  package-lock.json  package.json  pnpm-lock.yaml  style.css  tailwind.config.js  vite.config.js  需求.md
个人博客/: GETTING_STARTED.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
个人项目/: DEPLOYMENT.md  bookmarks_2025_9_11.html  nuxt.config.ts
小程序/: app.json  (+1 more)
(+481 files in other folders)
